--- a/bundleapp/src/App.css
+++ b/bundleapp/src/App.css
@@ -1,6 +1,7 @@
 .App {
   /* text-align: center; */
-  padding: 10px 20px;
+  padding: 10px 10%;
+  font-family: 'Archivo', sans-serif;
 }
 
 .App-logo {
