--- a/bundleapp/src/Components/Bundle/bundle.css
+++ b/bundleapp/src/Components/Bundle/bundle.css
@@ -15,7 +15,8 @@
 
 .bundle-info-img{
     width: 375px;
-    height: 375px;
+    max-height: 375px;
+    background-size: contain; 
     background: black;
 }
 
@@ -31,10 +32,11 @@
     margin: 0px;
     margin-bottom: 8px;
     font-size: 2.5rem;
-    /* font-weight: 900; */
+    
 }
 .bundle-info-author{
     font-weight: 500;
+    font-size: 1.3rem;
     color: rgb(83, 83, 83);
     margin: 0;
     margin-bottom: 32px;
@@ -45,13 +47,18 @@
     flex-wrap: wrap;
     
     /* border: solid red 2px; */
+    font-size: 1.2rem;
     padding: 10px;
     padding-left: 0;
-    max-width: 350px;
+    /* max-width: 350px; */
 }
 .bundle-info-products > div{
     text-align: left;
+    padding: 2px;
+    /* margin-right: 2px; */
+    /* border: solid red 2px; */
     /* min-width: ; */
+    
     margin-bottom: 10px;
 }
 
